--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sparta/simdb"]
 	path = sparta/simdb
-	url = git@github.com:colbynyce-mips/simdb.git
+	url = git@github.com:colby-nyce/simdb.git
