--- a/sparta/test/FastCheckpoint/CMakeLists.txt
+++ b/sparta/test/FastCheckpoint/CMakeLists.txt
@@ -6,4 +6,5 @@ sparta_test(FastCheckpoint_test FastCheckpoint_test_RUN)
 
 add_subdirectory(FILEStream)
 add_subdirectory(PersistentFastCheckpoint)
+add_subdirectory(DatabaseFastCheckpoint)
 
